--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,11 @@
   "name": "ServiceWorker Push",
   "short_name": "ServiceWorker Push",
   "icons": [{
-    "src": "/icon.png",
+    "src": "./icon.png",
     "sizes": "192x192",
     "type": "image/jpg"
   }],
-  "start_url": "./Notification/index",
+  "start_url": "./index.html",
   "display": "standalone",
   "gcm_sender_id": "557095834"
 }
